Closed Bug 75034 Opened 24 years ago Closed 23 years ago

Bidi: selection highlight on visual page is in the opposite position

Categories

(Core :: Layout: Text and Fonts, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mrous, Assigned: smontagu)

References

Details

(Keywords: testcase)

Attachments

(3 files)

From Bugzilla Helper:
User-Agent: Mozilla/4.0 (compatible; MSIE 5.01; Windows 98)
BuildID:    00000000 - Bidi build dated 20010404

Bidi: When double clicking on a word to select it, the opposite position is the 
one highlighted

Reproducible: Always
Steps to Reproduce:
1.Open file cp864.htm
2.Double click any word to select it


Actual Results:  Notice that the highlight denoting the selection is in the 
opposite position

Expected Results:  the word you double click on is the one that is highlighted

When you copy the selection to the clipboard and paste into notepad, the word 
you double clicked on is the one pasted (correct action).
Attached file Arabic visual file
looks like bidi selection highlight drawing issue. move this to moz0.9.1. Focus 
on landing IBMBIDI without breaking latin and CJK on moz0.9
Target Milestone: --- → mozilla0.9
Target Milestone: mozilla0.9 → mozilla0.9.1
erik resign. reassign all his bug to ftang for now.
Assignee: erik → ftang
mark it as assign
Status: NEW → ASSIGNED
decommit other bidi issue until we land IBMBIDI default on.
Target Milestone: mozilla0.9.1 → ---
reassign to simon@softel.co.il
Assignee: ftang → simon
Status: ASSIGNED → NEW
Changing QA contact to mahar@eg.ibm.com.
QA Contact: andreasb → mahar
this bug depends on the fix for bug # 81664
Depends on: 81664
move to "Arabic/Hewbrew" component
Component: Internationalization → BiDi Hebrew & Arabic
*** Bug 94856 has been marked as a duplicate of this bug. ***
Mass-move all BiDi Hebrew and Arabic qa to me, zach@zachlipton.com. 
Thank you Gilad for your service to this component, and best of luck to you 
in the future.

Sholom. 
QA Contact: mahar → zach
Examples are Arabic though the issue does not seem to be
Arabic only. For now, QA contact back to maha.
QA Contact: zach → mahar
*** Bug 99785 has been marked as a duplicate of this bug. ***
Keywords: testcase
*** Bug 101339 has been marked as a duplicate of this bug. ***
The checkin to bug 81664 has fixed the Arabic case, but this bug still exists in
Visual Hebrew and text with {unicode-bidi: bidi-override; direction: rtl} or
<BDO dir="rtl">

I have a patch which needs some polishing, will attach it soon.
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reopening: as I said before, Visual Arabic is fixed but other cases from the 
bugs duped to this aren't
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment on attachment 54070 [details] [diff] [review]
Patch for Visual Hebrew and bidi-override

sr=attinasi
Attachment #54070 - Flags: superreview+
Are these 2 'if' expressions really equivalent?


+   *  if ( (!isBidiSystem && isOddLevel) ||
+   *       (isBidiSystem &&
+   *        ((isRTLChars && !isOddLevel) ||
+   *         (!isRTLChars && isOddLevel))))
+   */
+  if (isRTLChars ^ (isOddLevel && isBidiSystem)) {


It seems like the first expression in the comment (!isBidiSystem && isOddLevel) 
would cause the 'if' clause to be entered, where as it is not possible in your 
new 'if' statement without factoring in the value of isRTLChars? Or is there an 
assumption here that isRTLChars guaranteed to be PR_TRUE if !isBidiSystem and 
isOddLevel?
kin: good catch. That was a typo for

  if (isOddLevel ^ (isRTLChars && isBidiSystem))
Comment on attachment 54695 [details] [diff] [review]
New patch addressing kin's comments

r=kin@netscape.com
Attachment #54695 - Flags: review+
Fix checked in
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
http://bugzilla.mozilla.org/show_bug.cgi?id=101339

the bug on mozilla 097 is still existed,
but When I checked the source code, the fix is there.

Is there something wrong with the fix?

Jerry: can you specify the platform you are testing on and the test page you are
using? I don't see a problem in either Win2k (with Hebrew and Arabic support) or
Linux, on any of the pages referenced in this bug or the bugs duped to it.

If you are using big-endian Solaris, there are known bugs in 0.9.7 that should
be fixed in an up-to-date nightly.
The testcase is 
http://mozilla.org/quality/browser/standards/xhtml/transitional/bdo.xml

I running mozilla 097 on win2k. it is wrong.

but when I run mozilla 094 on win2k, it is OK.

An more serious problem is as below:
when I use mozilla 094 source code , build it on solaris, 
and access the testcase, it is wrong.

When I debug the sourcecode, it didnot go though AdjustSelectionPointsForBidi 
function, in fact, in the code of 
GetBidiProperty(aPresContext, nsLayoutAtoms::embeddingLevel,
                         (void**) &level,sizeof(level));
it gives two different Level result on win2k platform and solaris platform.







You are seeing bug 115921 (for the bdo testcase) and bug 116976 (the levels not
being set correctly on solaris). Both are fixed in current nightlies, so you
should have no problem in 0.9.8.
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: mahar → layout.fonts-and-text
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: